--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".fragment.SsomListFragment">
+    tools:context=".fragment.SsomListTabFragment">
 
     <!--<ImageView-->
         <!--android:id="@+id/bg_list_bot"-->
