--- a/app/src/main/res/layout/view_bottom_tab.xml
+++ b/app/src/main/res/layout/view_bottom_tab.xml
@@ -19,9 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
+            android:layout_marginBottom="5dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:background="@drawable/foot_icon_chat_altbg"
-            android:visibility="gone"/>
+            />
     </FrameLayout>
 </RelativeLayout>
