--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -6,187 +6,230 @@
     android:background="#CC000000"
     tools:context=".fragment.FilterFragment" >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="19dp"
-        android:layout_marginLeft="21dp"
-        android:background="@drawable/bg_filter"
-        android:orientation="vertical">
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/filter_popup">
+
+        <TextView
+            android:id="@+id/ssomFilter"
+            style="@style/ssom_font_12_main_black"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="14dp"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="3dp"
+            android:drawableRight="@drawable/top_icon_greenred"
+            android:text="@string/filter_title"/>
 
         <LinearLayout
+            android:layout_below="@id/ssomFilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginRight="33dp"
-            android:orientation="horizontal">
+            android:paddingRight="25dp"
+            android:paddingLeft="25dp"
+            android:orientation="vertical">
 
+            <!-- 나이 선택 영역 -->
             <TextView
-                style="@style/ssom_font_16_main_black_bold"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/filter_ssom_title"/>
-            
-            <TextView
-                android:id="@+id/btn_select_all"
-                style="@style/ssom_font_16_red_pink"
+                style="@style/ssom_font_12_gray_warm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/filter_select_all"/>
+                android:layout_marginTop="15dp"
+                android:text="@string/filter_what_do_you_like"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_filter_type_ssom"
+                    style="@style/ssom_font_12_white"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_ssom_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_ssom"/>
+
+                <TextView
+                    android:id="@+id/tv_filter_type_ssoa"
+                    style="@style/ssom_font_12_white"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_ssoa_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_ssoa"/>
+            </LinearLayout>
+
+            <!-- 나이 선택 영역 -->
+            <TextView
+                style="@style/ssom_font_12_gray_warm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:text="@string/filter_how_old_do_you_like"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_filter_age_20_early"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_age_20_early" />
+
+                <TextView
+                    android:id="@+id/tv_filter_age_20_middle"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_age_20_middle" />
+
+                <TextView
+                    android:id="@+id/tv_filter_age_20_late"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_age_20_late" />
+
+                <TextView
+                    android:id="@+id/tv_filter_age_30_all"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_age_30_all" />
+            </LinearLayout>
+
+            <!-- 사람 선택 영역 -->
+            <TextView
+                style="@style/ssom_font_12_gray_warm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:text="@string/filter_how_many_do_you_like"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_filter_people_1"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_people_1" />
+
+                <TextView
+                    android:id="@+id/tv_filter_people_2"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_people_2" />
+
+                <TextView
+                    android:id="@+id/tv_filter_people_3"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_people_3" />
+
+                <TextView
+                    android:id="@+id/tv_filter_people_4_n_over"
+                    style="@style/ssom_font_12_gray_warm_bold"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:textIsSelectable="false"
+                    android:gravity="center"
+                    android:background="@drawable/filter_option_selector"
+                    android:textColor="@drawable/filter_option_color_selector"
+                    android:text="@string/filter_people_4_n_over" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="25dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_filter_select_all"
+                    style="@style/ssom_font_16_red_pink_bold"
+                    android:gravity="center"
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:text="@string/filter_select_all"/>
+
+                <TextView
+                    android:id="@+id/tv_filter_cancel"
+                    style="@style/ssom_font_16_pinkish_gray_two_selector"
+                    android:gravity="center"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:text="@string/filter_btn_cancel"/>
+
+                <TextView
+                    android:id="@+id/tv_filter_apply"
+                    style="@style/ssom_font_16_main_black_bold"
+                    android:gravity="center"
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:text="@string/filter_btn_apply"/>
+            </LinearLayout>
         </LinearLayout>
-
-        <!-- 나이 선택 영역 -->
-        <TextView
-            style="@style/ssom_font_12_gray_warm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="17dp"
-            android:layout_marginLeft="20dp"
-            android:text="@string/filter_how_old_do_you_like"/>
-
-        <LinearLayout
-            android:layout_width="240dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_filter_age_20_early"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_age_20_early" />
-
-            <TextView
-                android:id="@+id/tv_filter_age_20_middle"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_age_20_middle" />
-
-            <TextView
-                android:id="@+id/tv_filter_age_20_late"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_age_20_late" />
-
-            <TextView
-                android:id="@+id/tv_filter_age_30_all"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_age_30_all" />
-        </LinearLayout>
-
-        <!-- 사람 선택 영역 -->
-        <TextView
-            style="@style/ssom_font_12_gray_warm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:layout_marginLeft="20dp"
-            android:text="@string/filter_how_many_do_you_like"/>
-
-        <LinearLayout
-            android:layout_width="240dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_filter_people_1"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_people_1" />
-
-            <TextView
-                android:id="@+id/tv_filter_people_2"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_people_2" />
-
-            <TextView
-                android:id="@+id/tv_filter_people_3"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_people_3" />
-
-            <TextView
-                android:id="@+id/tv_filter_people_4_n_over"
-                style="@style/ssom_font_12_gray_warm_bold"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:textIsSelectable="false"
-                android:gravity="center"
-                android:background="@drawable/filter_option_selector"
-                android:textColor="@drawable/filter_option_color_selector"
-                android:text="@string/filter_people_4_n_over" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="29dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_filter_cancel"
-                style="@style/ssom_font_14_pinkish_gray_two_selector"
-                android:gravity="center"
-                android:layout_width="40dp"
-                android:layout_height="30dp"
-                android:text="@string/filter_btn_cancel"/>
-
-            <TextView
-                android:id="@+id/tv_filter_apply"
-                style="@style/ssom_font_14_main_black"
-                android:gravity="center"
-                android:layout_width="70dp"
-                android:layout_height="30dp"
-                android:text="@string/filter_btn_apply"/>
-        </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/icon_circle"
