[UI변경] 모든 UI 변경사항 적용완료 - 필터변경 - UI 변경에 따른 기능적용 - 채팅 푸시 관련해서 적용해야함

--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,18 +8,21 @@
     tools:context=".activity.SsomChattingActivity" >
 
     <com.ssomcompany.ssomclient.widget.SsomActionBarView
-        android:id="@+id/ssom_action_bar"
+        android:id="@+id/ssom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:popupTheme="@style/AppTheme"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"/>
 
     <FrameLayout
-        android:layout_below="@id/ssom_action_bar"
+        android:layout_below="@id/ssom_toolbar"
         android:id="@+id/chat_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <View
-        android:layout_below="@id/ssom_action_bar"
+        android:layout_below="@id/ssom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:background="@drawable/toolbar_dropshadow"/>
