--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -15,8 +15,15 @@
         android:layout_height="match_parent"
         android:divider="@drawable/post_list_divider"/>
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center"
-        />
-
+    <TextView android:id="@+id/emptyView"
+        style="@style/ssom_font_14_pinkish_gray_two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:drawablePadding="16dp"
+        android:drawableTop="@drawable/icon_couple_gray"
+        android:text="@string/empty_ssom_list"
+        android:visibility="gone"/>
 </RelativeLayout>
