--- a/app/src/main/res/layout/view_ssom_action_bar.xml
+++ b/app/src/main/res/layout/view_ssom_action_bar.xml
@@ -34,6 +34,18 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/ssomFilter"
+        style="@style/ssom_font_12_main_black_single"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="13dp"
+        android:drawablePadding="3dp"
+        android:text="@string/filter_title" />
+
+    <TextView
         android:id="@+id/btn_chatting_room_meeting"
         style="@style/ssom_font_12_white_bold"
         android:layout_width="82dp"
@@ -42,6 +54,5 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:orientation="horizontal"
         android:visibility="gone" />
 </RelativeLayout>
