[UI변경] 모든 UI 변경사항 적용완료 - 필터변경, 쏨 타입 필터링적용 - 쏨 리스트 뷰 디자인 변경 적용

--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -13,7 +13,8 @@
         <!--android:src="@drawable/bg_list_bot"/>-->
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@drawable/post_list_divider"/>
+        android:divider="@color/custom_e5e5e5"
+        android:dividerHeight="0.5dp"/>
 
     <TextView android:id="@+id/emptyView"
         style="@style/ssom_font_14_pinkish_gray_two"
