--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,34 +43,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--<View-->
+                <!--android:id="@+id/topMapShadow"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="68dp"-->
+                <!--android:background="@drawable/map_shadow"/>-->
+
             <View
+                android:id="@+id/topDropShadow"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:background="@drawable/toolbar_dropshadow"/>
+                android:background="@drawable/toolbar_dropshadow" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/map_current_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_site_me"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="13.5dp"/>
 
-                <ImageView
-                    android:id="@+id/map_current_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/btn_site_me"
-                    android:layout_marginTop="22.7dp"
-                    android:layout_marginLeft="20dp"/>
-
-                <ImageView
-                    android:id="@+id/btn_write"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/btn_write"/>
-
-            </RelativeLayout>
+            <ImageView
+                android:id="@+id/btn_write"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/main_write_btn"/>
         </FrameLayout>
 
         <FrameLayout
