--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="83dp"
+    android:layout_height="wrap_content"
     >
 
     <!-- left profile image layout Start -->
     <FrameLayout
         android:id="@+id/profile_layout"
-        android:layout_width="80dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="14dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true">
 
         <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
             android:id="@+id/icon_list_image"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="1dp"
             android:layout_gravity="center_vertical"/>
 
         <ImageView
             android:id="@+id/icon_ing"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="1dp"
             android:layout_gravity="center_vertical"
             android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/icon_list_r"
-            android:layout_width="80dp"
-            android:layout_height="70dp"
-            android:src="@drawable/icon_list_st_g" />
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:src="@drawable/list_green_border" />
+
+        <ImageView
+            android:id="@+id/icon_list_mark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:src="@drawable/list_mark_green"/>
     </FrameLayout>
 
     <!-- left profile image layout End -->
@@ -45,8 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="17.5dp"
-        android:layout_marginRight="15.8dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginRight="13.5dp"
+        android:layout_marginLeft="13.5dp"
         android:layout_toRightOf="@id/profile_layout">
 
         <TextView
@@ -60,7 +68,7 @@
             style="@style/ssom_font_9_pinkish_gray_single"
             android:layout_width="45.3dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="11dp"
             android:layout_gravity="center_vertical"/>
 
         <TextView
@@ -78,8 +86,8 @@
         android:layout_width="match_parent"
         android:layout_height="33dp"
         android:layout_marginTop="5.8dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="15.8dp"
+        android:layout_marginLeft="13.5dp"
+        android:layout_marginRight="32dp"
         android:layout_below="@id/item_info"
         android:layout_toRightOf="@id/profile_layout"
         />
