--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,11 @@
     <dimen name="dialog_vertical_button_padding_right">24dp</dimen>
     <dimen name="dialog_vertical_button_height">36dp</dimen>
     <dimen name="dialog_custom_view_margin">24dp</dimen>
+
+    <!-- pull to refresh view -->
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="header_footer_left_right_padding">24dp</dimen>
+    <dimen name="header_footer_top_bottom_padding">12dp</dimen>
 </resources>
