--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -412,4 +412,10 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="ssom_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:background">@color/red_pink</item>
+    </style>
+
 </resources>
