--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SsomMapActivity">
 
     <com.ssomcompany.ssomclient.widget.SsomActionBarView
-        android:id="@+id/ssom_action_bar"
+        android:id="@+id/ssom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="52dp"
+        app:popupTheme="@style/AppTheme"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"/>
 
     <FrameLayout
         android:id="@+id/container"
-        android:layout_below="@id/ssom_action_bar"
+        android:layout_below="@id/ssom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"/>
@@ -20,7 +24,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ssom_action_bar"
+        android:layout_below="@id/ssom_toolbar"
         android:src="@drawable/map_shadow"/>
 
     <LinearLayout
