--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,7 +47,7 @@
             android:layout_gravity="center"
             android:background="@drawable/img_today_empty"/>
 
-        <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
+        <ImageView
             android:id="@+id/profile_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
