--- a/app/src/main/res/layout/ssom_chat_message_item.xml
+++ b/app/src/main/res/layout/ssom_chat_message_item.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="2dp"
             android:layout_alignParentLeft="true">
 
-            <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
+            <ImageView
                 android:id="@+id/left_chat_profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -80,7 +80,7 @@
             android:layout_marginTop="2dp"
             android:layout_alignParentRight="true">
 
-            <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
+            <ImageView
                 android:id="@+id/right_chat_profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
