[수정] 네트워크 volley --> retrofit & okhttp3 변경  - 버그 일부 수정(앱 강종 케이스)

--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -10,7 +10,7 @@
         android:src="@drawable/photo_empty_full"
         android:layout_centerInParent="true"/>
     
-    <com.ssomcompany.ssomclient.widget.NetworkImageView
+    <uk.co.senab.photoview.PhotoView
         android:id="@+id/detail_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
