--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,177 +23,177 @@
     </style>
 
     <style name="ssom_font_6_red_pink_single">
-        <item name="android:textSize">6sp</item>
+        <item name="android:textSize">6dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_9_pinkish_gray_single">
-        <item name="android:textSize">9sp</item>
+        <item name="android:textSize">9dp</item>
         <item name="android:textColor">@color/pinkish_gray</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_9_red">
-        <item name="android:textSize">9sp</item>
+        <item name="android:textSize">9dp</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_9_white">
-        <item name="android:textSize">9sp</item>
+        <item name="android:textSize">9dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_9_pinkish_gray_two_single">
-        <item name="android:textSize">9sp</item>
+        <item name="android:textSize">9dp</item>
         <item name="android:textColor">@color/pinkish_gray_two</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_9_grayish_brown_single">
-        <item name="android:textSize">9sp</item>
+        <item name="android:textSize">9dp</item>
         <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_pinkish_gray_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/pinkish_gray</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_red_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_red_pink_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_main_black">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_12_main_black_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_main_black_2_lines">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
         <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_12_gray_warm">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_12_gray_warm_bold">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_12_gray_warm_2_lines">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
         <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_12_white">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_12_white_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_white_bold">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_12_white_2_lines">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_12_grayish_brown_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_12_pinkish_gray_two_single">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">@color/pinkish_gray_two</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_13_5_red_pink_bold">
-        <item name="android:textSize">13.5sp</item>
+        <item name="android:textSize">13.5dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_13_white_single">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_13_main_black_single">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_13_pinkish_gray_two_single">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/pinkish_gray_two</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_edit_13_main_black_single">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
         <item name="android:maxLines">1</item>
@@ -202,198 +202,198 @@
     </style>
 
     <style name="ssom_font_13_999999_single">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/custom_999999</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_13_white_bold">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_14_custom_4d4d4d_single">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/custom_4d4d4d</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_14_custom_515151_single">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/custom_515151</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_14_gray_warm_single">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_14_main_black">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_14_pinkish_gray_two">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@color/pinkish_gray_two</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_14_pinkish_gray_two_selector">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">@drawable/filter_button_selector</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_custom_4d4d4d_single">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/custom_4d4d4d</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_16_green_blue">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/green_blue</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_custom_555555">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/custom_555555</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_custom_666666">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/custom_666666</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_custom_666666_2_lines">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/custom_666666</item>
         <item name="android:typeface">normal</item>
         <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_16_red_pink">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_red_pink_bold">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_16_gray_warm">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_grayish_brown">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_white_single">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_16_white_bold">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_16_grayish_brown_single">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="ssom_font_16_main_black_bold">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_16_pinkish_gray_two_selector">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@drawable/filter_button_selector</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_18_555555">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/custom_555555</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_20_red_pink_bold">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_20_grayish_brown_bold">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_23_white">
-        <item name="android:textSize">23sp</item>
+        <item name="android:textSize">23dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_24_red_pink_bold">
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">24dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_24_white_bold">
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">24dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ssom_font_36_555555">
-        <item name="android:textSize">36sp</item>
+        <item name="android:textSize">36dp</item>
         <item name="android:textColor">@color/custom_555555</item>
         <item name="android:typeface">normal</item>
     </style>
 
     <style name="ssom_font_36_red_pink_bold">
-        <item name="android:textSize">36sp</item>
+        <item name="android:textSize">36dp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
